fix: adjust stylings such that ids align with nextjs conventions

--- a/styles/1-globals/HTMLElementGlobals.scss
+++ b/styles/1-globals/HTMLElementGlobals.scss
@@ -3,11 +3,11 @@
 * {
   box-sizing: border-box;
 }
-#root,
+#__next,
 .App {
   min-width: 100vw;
 }
-#root {
+#__next {
   background-color: variables.$cream;
 }
 
